Closed
Bug 250128
Opened 21 years ago
Closed 21 years ago
GOK expose "seperator" as "no name".
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Louie.Zhao, Assigned: Louie.Zhao)
Details
Attachments
(1 file)
|
1.35 KB,
patch
|
aaronlev
:
review+
Henry.Jia
:
superreview+
|
Details | Diff | Splinter Review |
Steps to Reproduce:
1. Start Mozilla and GOK.
2. On GOK main window, click Menus->File->File->no name.
Bug:
Seperator in menu should not display as "no name" in GOK.
| Assignee | ||
Comment 1•21 years ago
|
||
Mozilla exports "no name" as name and "no description" as description when they
are unavailable. This can confuse AT tools such as GOK. Mozilla should return
null if there is no name/description for AT object.
Comment 2•21 years ago
|
||
Comment on attachment 152489 [details] [diff] [review]
patch v1
1. This is a problem in GOK.
2. This isn't i18n-safe
3. What if there's something that actually has the name "no name" !!
----------------------
| Name | Vote |
-----------------------
| John | Yes |
-----------------------
| Betsy | No |
-----------------------
| no name | Yes |
-----------------------
Attachment #152489 -
Flags: review-
| Assignee | ||
Comment 3•21 years ago
|
||
> (From update of attachment 152489 [details] [diff] [review])
> 1. This is a problem in GOK.
The way mozilla deals with name/description will confuse many AT Tools because
it uses string "no name" to represent the fact that the object has no name. AT
Tools must understand the meaning of string "no name". In addition, if there is
a object whose name is really "no name", Mozilla can't make any differences
between them. I think it's mozilla's problem.
> 2. This isn't i18n-safe
From my point of view, the current code isn't i18n-safe because mozilla will
always return ASCII string "no name" under different locales if the object has
no name.
> 3. What if there's something that actually has the name "no name" !!
Please refer to
http://lxr.mozilla.org/seamonkey/source/accessible/src/atk/nsAccessibleWrap.cpp#701.
Mozilla will add "no name" if there is no name. So there won't be any problem if
there's object whose name is really "no name".
Comment 4•21 years ago
|
||
Comment on attachment 152489 [details] [diff] [review]
patch v1
Sorry I misunderstood the patch the first time. I must have been tired :/ My
apologies.
Attachment #152489 -
Flags: review- → review+
| Assignee | ||
Comment 5•21 years ago
|
||
Comment on attachment 152489 [details] [diff] [review]
patch v1
Thanks for reviewing.
Henry, can you sr this patch? Thanks
Attachment #152489 -
Flags: superreview?(Henry.Jia)
Comment on attachment 152489 [details] [diff] [review]
patch v1
sr=Henry
Attachment #152489 -
Flags: superreview?(Henry.Jia) → superreview+
| Assignee | ||
Comment 7•21 years ago
|
||
Thanks for sr and r. Patch checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•