bug 250128 GOK expose "seperator" as "no name". r = aaronleventhal sr= henry.jia